Fixing text spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,6 @@
 @import './App.scss';
+@import url('http://fonts.cdnfonts.com/css/helvetica-neue-9');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 html,
 body {
@@ -6,8 +8,7 @@ body {
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', 'Open Sans', 'Droid Sans', 'Arial', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
