--- a/src/scss/formation.scss
+++ b/src/scss/formation.scss
@@ -35,3 +35,11 @@
     color: #fff;
   }
 }
+
+.print {
+  .formation {
+    &__formation-name, &__formation-cost {
+      color: #000;
+    }
+  }
+}
